--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-:root {
+@import url("styles/header.css");
+root {
     --cor-de-fundo: #EBECEE;
+
 }
 body {
     background-color: var(--cor-de-fundo);
